styles/main.css
/* ... */
.contact-fields {
    width: 100%;
    height: 600px;
    overflow: auto;
}

.form-control {
    height: 10%;
    margin-bottom: 15px;
    border-right: 20px;
    border-radius: 5px;
    border-style: none;
    background-color: lightgray;    
/*    background-color: #e6e6e6;*/
}

.form-control:hover {
    background-color: whitesmoke;
}

input {
    width: 100%;
}

textarea {
    -webkit-box-sizing: border-box;
	-moz-box-sizing: border-box;
	box-sizing: border-box;
    width: 100%;
    resize: none;
/*    background-color: black;*/
/*    opacity: 0.5;*/
}

::-webkit-input-placeholder { /* Chrome/Opera/Safari */
  color: black;
    opacity: 0.5
}
::-moz-placeholder { /* Firefox 19+ */
  color: black;
        opacity: 0.5

}
:-ms-input-placeholder { /* IE 10+ */
  color: black;
        opacity: 0.5

}
:-moz-placeholder { /* Firefox 18- */
  color: black;
        opacity: 0.5

}

.fa-paper-plane {
  border-style: none;
}

.btn-send {
    text-align: center;
    border-radius: 5px;
    width: 6%;
    border-style: none;
    background-color: lightgray;
}

.btn-send:hover {
    background-color: gray;
    color: white;
}

.btn-send:active {
    width: 5%;
}

/*
.fa-paper-plane:hover {
    color: white;
}
*/

#topOne, #topTwo, #topThree, #topFour {
    bottom: 10px;
}

/* Media Query large-view-port-view */

/*@media (min-width: 1025px) {*/
@media (min-width: 797.51px) {

    .small-view-port-view {
        display: none;
    }
}

/* Media Query small-view-port-view */

/*@media (max-width: 1024px) {*/
@media (max-width: 797.49px) {

    .large-view-port-view {
        display: none;
    }

    .small-nav {
        position: fixed;
        top: 0;
        left: 0;
/*        height: 4.5%;*/
    }
    
    .brand {
        line-height: 46px;
        margin-left: 1%;
        width: 230px;
    }
    .hamburger-container {
        position: absolute;
        overflow: auto;
        margin: auto;
        width: 56px;
        height: 56px;
        margin-right: 13.5px;
        top: 0; left: 0; bottom: 0; right: 0;
    }

    .hamburger {
        font-size: 312.5%;
        color: black;
        z-index: 500;
        cursor: pointer;
/*        opacity: 0.5;*/
    }

    .hamburger:hover {
        -webkit-transition: color 0.1s ease-in-out;
        -moz-transition: color 0.1s ease-in-out;
        -o-transition: color 0.1s ease-in-out;
        transition: color 0.1s ease-in-out;
    }

    .x-out {
        font-size: 312.5%;
        color: black;
        cursor: pointer;
    }

    .x-out:hover {
        -webkit-transition: color 0.1s ease-in-out;
        -moz-transition: color 0.1s ease-in-out;
        -o-transition: color 0.1s ease-in-out;
        transition: color 0.1s ease-in-out;
    }

    .hamburgerMenu {
        position: fixed;
        background-color: white;
        width: 105px;
        top: 50px;
        height: 100%;
        z-index: 600;
        margin: auto;
    }

    .hamburgerMenu ul {
        margin: 0;
        margin-top: 30%;
        height: 94%;
        width: 100%
        }
    
    .hamburgerMenu li {
        position: relative;
        display: block;
        left: -35px;
        cursor: pointer;
        width: 100%;
    }

    .hamburgerMenu li:nth-child(1), .hamburgerMenu li:nth-child(2), .hamburgerMenu li:nth-child(3), .hamburgerMenu li:nth-child(4) {
        height: 24.4%;
    }

    .hamburgerMenu li a {
        text-align: right;
        text-decoration: none;
        font-family: 'Fredoka One', cursive;
        font-size: 140%;
        padding-top: 10%;
        padding-bottom: 10%;
        padding-left: 5%;
        padding-right: 5%;
        border-radius: 5px;
    }

    .unhighlighted {
        color: black;
        background-color: white;
        -webkit-transition: color 1s ease-in-out;
        -moz-transition: color 1s ease-in-out;
        -o-transition: color 1s ease-in-out;
        transition: color 1s ease-in-out;
    }

    .highlight {
        color: white;
        background-color: black;
        -webkit-transition: color 1s ease-in-out;
        -moz-transition: color 1s ease-in-out;
        -o-transition: color 1s ease-in-out;
        transition: color 1s ease-in-out;
    }
    
    .wrapper {
        opacity: 0.95;
    }

    #wrapper-one {
        margin-top: 200%;
    }

    .fullscreen-video__video {
        display: none;
    }
}

@media only screen
    and (min-device-width: 569px)
    and (max-device-width: 797px) {
        
        
}

/* ----------- iPhone 5 portrait ----------- */

@media only screen
  and (min-device-width: 320px)
  and (max-device-width: 568px)
  and (-webkit-min-device-pixel-ratio: 2)
  and (orientation: portrait) {

/*
    .brand {
          font-size: 45px;
          margin-left: 4%;
          margin-top: 3px;
    }

    .corner {
          border-radius: 15px;
    }

    .content {
          width: 100%;
    }

    .hamburgerMenu {
        right: -28%;
        width: 28%;
    }

    .hamburgerMenu ul {
        margin: 0;
        margin-top: 20px;
        height: 94%;
    }

    .hamburgerMenu li:nth-child(2), .hamburgerMenu li:nth-child(3), .hamburgerMenu li:nth-child(4) {
        margin-top: 60px;
    }

    .hamburgerMenu li a {
        font-size: 20px;
        padding-top: 35%;
        padding-bottom: 35%;
        border-radius: 20px;
    }
*/

}
/* ... */

